--- a/src/route-tasks/styles.module.css
+++ b/src/route-tasks/styles.module.css
@@ -62,6 +62,7 @@
   border: 1px solid var(--border-color);
   border-radius: 5px;
   padding: 5px;
+  height: 50px;
   width: 250px;
   display: flex;
   flex-direction: column;
